--- a/navigation/screens/Quiz.css
+++ b/navigation/screens/Quiz.css
@@ -8,25 +8,22 @@ body {
 }
 * {
   font-family: "Verdana", cursive, sans-serif;
-  color: #ffffff;
+  color: #black;
 }
 
 
 
 .app {
-  background-color: #252d4a;
+  background-color: #62cdff;
   width: 450px;
   min-height: 200px;
   height: min-content;
   border-radius: 15px;
   padding: 20px;
-  box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-  display: flex;
   justify-content: space-evenly;
 }
 
 .score-section {
-  display: flex;
   font-size: 24px;
   align-items: center;
 }
@@ -75,7 +72,6 @@ button {
   border-radius: 15px;
   display: flex;
   padding: 5px;
-  justify-content: flex-start;
   align-items: center;
   border: 5px solid #234668;
   cursor: pointer;
