--- a/navigation/screens/Quiz.css
+++ b/navigation/screens/Quiz.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700,900,300,500,600,300italic|Roboto:400,700,500|Oleo+Script:400");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
